--- a/java/app/src/main/res/layout/fragment_country_detail.xml
+++ b/java/app/src/main/res/layout/fragment_country_detail.xml
@@ -11,7 +11,7 @@
 
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipeContainer1"
+        android:id="@+id/country_detail_swipe_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -65,7 +65,6 @@
                     android:layout_height="0.5dp"
                     android:layout_marginBottom="4dp"
                     android:background="#979797" />
-
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/fragment_country_detail_info"
@@ -324,19 +323,162 @@
                         android:layout_height="300dp" />
                 </LinearLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/fragment_country_detail_others_recyclerview"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingTop="6dp"
-                    android:paddingBottom="6dp">
+                    android:orientation="vertical" >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:gravity="center"
+                            android:layout_weight="0.1"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="1"/>
+                        <TextView
+                            android:layout_weight="0.6"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/active_cases"/>
+                        <TextView
+                            android:gravity="right"
+                            android:id="@+id/fragment_country_detail_active_cases"
+                            android:layout_weight="0.3"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:gravity="center"
+                            android:layout_weight="0.1"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="2"/>
+                        <TextView
+                            android:layout_weight="0.6"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/serious_cases"/>
+                        <TextView
+                            android:gravity="right"
+                            android:id="@+id/fragment_country_detail_serious_cases"
+                            android:layout_weight="0.3"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:gravity="center"
+                            android:layout_weight="0.1"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="3"/>
+                        <TextView
+                            android:layout_weight="0.6"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/total_cases_per_1pop"/>
+                        <TextView
+                            android:gravity="right"
+                            android:id="@+id/fragment_country_detail_total_cases_per_1pop"
+                            android:layout_weight="0.3"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:gravity="center"
+                            android:layout_weight="0.1"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="4"/>
+                        <TextView
+                            android:layout_weight="0.6"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/total_deaths_per_1pop"/>
+                        <TextView
+                            android:gravity="right"
+                            android:id="@+id/fragment_country_detail_total_deaths_per_1pop"
+                            android:layout_weight="0.3"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:gravity="center"
+                            android:layout_weight="0.1"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="5"/>
+                        <TextView
+                            android:layout_weight="0.6"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/total_tests"/>
+                        <TextView
+                            android:gravity="right"
+                            android:id="@+id/fragment_country_detail_total_tests"
+                            android:layout_weight="0.3"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:gravity="center"
+                            android:layout_weight="0.1"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
 
-
-
-                </androidx.recyclerview.widget.RecyclerView>
+                            android:text="6"/>
+                        <TextView
+                            android:layout_weight="0.6"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/tests_per_1pop"/>
+                        <TextView
+                            android:gravity="right"
+                            android:id="@+id/fragment_country_detail_tests_per_1pop"
+                            android:layout_weight="0.3"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                </LinearLayout>
 
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <!-- Loading section -->
+
+    <include
+        android:id="@+id/country_detail_network_error"
+        layout="@layout/component_network_error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+    <include
+        android:id="@+id/country_detail_loading"
+        layout="@layout/component_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 </LinearLayout>
