--- a/java/app/src/main/res/drawable/shadow.xml
+++ b/java/app/src/main/res/drawable/shadow.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:startColor="#1F000000"
-        android:endColor="@android:color/transparent"
-        android:angle="90" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape  android:shape="rectangle">
+            <solid android:color="#000" />
+            <corners android:radius="6dp" />
+        </shape>
+    </item>
+    <item android:top="2dp" android:left="2dp" android:bottom="2dp" android:right="2dp">
+        <shape  android:shape="rectangle">
+            <solid android:color="#faf2f2" />
+            <stroke android:width="1dp" android:color="#faf2f2" />
+        </shape>
+    </item>
+</layer-list>
