--- a/java/app/src/main/res/layout/fragment_about.xml
+++ b/java/app/src/main/res/layout/fragment_about.xml
@@ -5,12 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="12dp"
+    android:layout_marginRight="12dp"
     android:orientation="vertical">
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipeContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/nestedScroll"
@@ -23,14 +20,50 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <!-- Update section -->
+                <TextView
+                    android:id="@+id/fragment_country_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/opensans_extrabold"
+                    android:text="About"
+                    android:textSize="36dp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="About"/>
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="0dp"
+                    android:fontFamily="@font/opensans_bolditalic"
+                    android:text="Version"
+                    android:textSize="16dp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="1.0.0"
+                    android:textSize="14dp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="4dp"
+                    android:fontFamily="@font/opensans_bolditalic"
+                    android:text="Project"
+                    android:textSize="16dp" />
+                <TextView
+                    android:drawableLeft="@drawable/ic_github_24dp"
+                    android:drawablePadding="12dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:textIsSelectable="true"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="https://github.com/cs50vn/virustracker-android"
+                    android:textSize="12dp" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
 </LinearLayout>
